# cuic

./: .cproject  .gitignore  .gitmodules  README.md  sample.Makefile
src/: Makefile  config.cpp  config.h  cuic.cpp  cuic_gige.cpp  supervisord.conf
src/test/: removefiles.py
using_pleora/src/: 00:06:be:01:7a:d6  config.cpp  config.h  configuration.cfg  cuic.cpp  cuic_gige.cpp
using_pleora/utils/: lsyncd.conf.lua
using_pleora/utils/on_compute/: move_files.sh
using_teledyne/: CMakeLists.txt  README.md  config_fname.csv
using_teledyne/amqpcpp_example/: CMakeLists.txt  rpc_client.cpp  rpc_server.cpp
using_teledyne/capture_demo/: CMakeLists.txt  genicam_cpp_demo  genicam_cpp_demo.cpp  makefile
using_teledyne/capture_demo/src/: config_fname.csv  genicam_cpp_demo.cpp  makefile
using_teledyne/capture_watchdog/: #logger.py#  fshandler.py  lenscontroller.py  logger.py  orchestrator.py  ptcontroller.py  pthandler.py  ptwatchdog.py  rpc_client.py  transfer.py  watchdog.py
using_teledyne/capture_watchdog/old/: current_status.meta~  fshandler.py  fshandler.py.bak  last_command.cmd  last_command.cmd~  ptcontroller.py  pthandler.py  ptwatchdog.py  rpc_client.py  test.py  watchdog.py  watchdog.py.bak  watchdog.py.bak2
using_teledyne/common/: CMakeLists.txt  GevUtils.c
using_teledyne/plog/: CMakeLists.txt
using_teledyne/teledyne_container/: Dockerfile
using_teledyne/teledyne_container/DALSA/GigeV/: GenICam_v3_0_0_linux_pkg.tgz  readme.txt
using_teledyne/teledyne_container/DALSA/GigeV/examples/common/: GevUtils.c  X_Display_utils.c
using_teledyne/teledyne_container/DALSA/GigeV/examples/dump_features/: feature_loader.c  loadfeatures.cpp
using_teledyne/teledyne_container/DALSA/GigeV/examples/genicam_c_demo/: genicam_c_demo.c
using_teledyne/teledyne_container/DALSA/GigeV/examples/genicam_cpp_demo/: genicam_cpp_demo.cpp
using_teledyne/teledyne_container/DALSA/GigeV/examples/genicam_fileaccessdemo/: genicam_fileaccessdemo.cpp
using_teledyne/teledyne_container/DALSA/GigeV/include/: gev_linux.h  gevapi.h
using_teledyne/teledyne_container/DALSA/GigeV/lib/: libGevApi_2_0_i386_a  libGevApi_2_0_x86_64_a
using_teledyne/teledyne_container/DALSA/src/gevlib/: Makefile  cameraregdata.c  gev_linux.c  gev_message_linux.c  gev_packet_linux.c  gev_packet_mmap.c  gev_xml_utils.c  gevapi_internal.h  gevapi_utils.c  gevgenapi.cpp
using_teledyne/teledyne_container/DALSA/src/w32lib/corw32/: corw32lib.c  csection.c  fileutils.c  objutils.c  timeutils.c  waitutils.c
using_teledyne/teledyne_container/DALSA/utils/: display_license  genie_instools.sh
using_teledyne/utils/: ca.crt  supervisord.conf
utils/: copyfiles.py  copyfiles_BB_North.py  copyfiles_BB_South.py  copyfiles_HTI.py  extractTemp.py  register.py  removefiles.py  savetodb.py  savetodbBB.py  tutorial_notifier.py  uo_tools.py
utils/on_compute/: move_files.sh
